Adapt packages to JDK 9.